--- a/실습/socar/css/index.css
+++ b/실습/socar/css/index.css
@@ -128,7 +128,7 @@ main {
 
 #cover {
     height: 100vh;
-    background-image: url(../image/main_visual_fullscreen.jpg);
+    background-image: url(../img/main_visual_fullscreen.jpg);
     background-position: 30% center;
     display: flex;
     justify-content: center;
@@ -314,7 +314,7 @@ footer nav {
     content: '';
     width: 16px;
     height: 16px;
-    background-image: url(../image/arrow-down.svg);
+    background-image: url(../img/arrow-down.svg);
 }
 
 
@@ -377,6 +377,7 @@ footer nav {
     width: 100%;
     height: 100vh;
     background-color: #000000dd;
+    display: none;
 }
 
 .hamberger-nav {
@@ -387,6 +388,18 @@ footer nav {
     background-color: #28323c;
     height: 100vh;
     padding: 0 32px;
+
+    transition: 0.5s;
+    transform: translateX(100%);
+}
+
+.hamberger-click.active {
+
+    display: block;
+}
+
+.hamberger-click.active>.hamberger-nav {
+    /* transform: none; */
 }
 
 .hamberger-nav>div {
@@ -395,11 +408,9 @@ footer nav {
     padding: 32px 0;
     border-bottom: 1px solid #555;
 }
-
 .hamberger-nav>div:last-child {
     border: none;
 }
-
 .hamberger-nav>div>a {
     padding: 16px 0;
     font-size: 20px;
@@ -408,7 +419,6 @@ footer nav {
     font-weight: bold;
     transition: 0.5s;
 }
-
 .hamberger-nav>div>a:hover {
     color: var(--main-color);
 }
